# blip25-mbe

./: .gitignore  CHANGELOG.md  CHIP_GAIN_CALIBRATION.md  CLAUDE.md  Cargo.toml  DESIGN.md  DVSI_DEVIATIONS_QUALITY_LEVERS.md  INTEGRATION.md  LICENSE  PATENT_NOTICE.md  QUALITY_FINDINGS.md  README.md  SCOPE_PLAN.md  SDR_SCOPE_PLAN.md
.github/workflows/: ci.yml  publish.yml
conformance/baselines/: README.md  chip_ab_2026-04-30.csv  cross_rate_2026-05-15.csv  fullrate_self_corpus_2026-06-01.csv  halfrate_ab_clean_corpus_2026-06-01.csv  halfrate_cross_2026-05-31.csv  our_enc_our_dec_2026-05-14.csv
conformance/baselines/2d_b0_sweep_2026-05-15/: manifest.csv  report.txt  results.csv  results_augmented.csv  results_with_spec.csv
conformance/chip/: Cargo.toml
conformance/chip/python/: README.md  dvsi_driver.py  test_dvsi_driver.py
conformance/chip/src/: main.rs
conformance/scripts/: .gitignore  JMBEDecode.java  JMBEDirectIMBE.java  JMBEDumpInfo.java  README.md  analyze_chip_vs_spec_energy.py  analyze_denoise.py  analyze_halfrate_2d_b0_sweep.py  analyze_levers.py  denoise_sweep.sh  fit_per_bin_lowpass.py  lever_sweep.sh  make_noisy.py  run_halfrate_2d_b0_sweep.sh  score_ab_matrix.py
conformance/speech-quality/: Cargo.toml
conformance/speech-quality/examples/: chip_bit_decode.rs  chip_bit_diff.rs  chip_bit_disposition.rs  chip_bit_zeroerr.rs  diff_per_frame.rs  encode_pcm_to_bit.rs  golay_brute.rs  halfrate_dump_info.rs  halfrate_envelope_converge.rs  halfrate_field_dump.rs  idas_pairmode.rs  probe_chip_bit.rs  probe_chip_dequant.rs  sine_probe.rs
conformance/speech-quality/src/: main.rs
conformance/vectors/: Cargo.toml
conformance/vectors/src/: main.rs
crates/blip25-mbe/: Cargo.toml  build.rs
crates/blip25-mbe/examples/: amplitude_spike_probe.rs  decode_ambe9_to_pcm.rs  decode_imbe.rs  decode_r33_frame.rs  decode_with_synth.rs  derive_r34_order.rs  disp_trace.rs  dvsi_soft_gain.rs  error_inject_probe.rs  halfrate_2d_b0_sweep.rs  hum_diag_probe.rs  imbe_jump_probe.rs  lcg_probe_frame.rs  post_repeat_probe.rs  print_pitch_table.rs  profile_decode.rs  profile_encode.rs  repeat_attenuation_dump.rs  spectral_jump_probe.rs  spectral_step_probe.rs  sweep_dump_params.rs  tone_amp_audit.rs  vocoder_bench.rs  vocoder_demo.rs  voiced_probe_frame.rs
crates/blip25-mbe/src/: ambe_frames.rs  bits.rs  codecs.rs  dvsi_3000.rs  dvsi_soft_decision.rs  enhancement.rs  fec.rs  imbe7200.rs  imbe_frames.rs  imbe_wire.rs  lib.rs  mbe_params.rs  p25_fullrate.rs  p25_halfrate.rs  rate33.rs  rate_conversion.rs  vocoder.rs
crates/blip25-mbe/src/ambe_frames/: frame.rs  rate_tables.rs
crates/blip25-mbe/src/ambe_plus2_wire/: dequantize.rs  frame.rs
crates/blip25-mbe/src/codecs/: ambe.rs  ambe_plus.rs  ambe_plus2.rs  mbe_baseline.rs
crates/blip25-mbe/src/codecs/mbe_baseline/: analysis.rs  phase_regen.rs
crates/blip25-mbe/src/codecs/mbe_baseline/analysis/: amplitude.rs  basis.rs  denoise.rs  hpf.rs  humnotch.rs  mod.rs  pitch.rs  predenoise.rs  predictor.rs  profile.rs  pyin.rs  refine.rs  silence.rs  tone_detect.rs  vuv.rs
crates/blip25-mbe/src/imbe7200/: dequantize.rs  fec.rs  frame.rs  priority.rs
crates/blip25-mbe/src/imbe_frames/: dequantize.rs  dequantize_halfrate.rs  fec.rs  full_rate.rs  half_rate.rs  priority.rs
crates/blip25-mbe/src/imbe_wire/: dequantize.rs
crates/blip25-mbe/src/mbe_params/: quantize.rs
crates/blip25-mbe/src/p25_fullrate/: dequantize.rs  fec.rs  frame.rs  priority.rs
crates/blip25-mbe/src/p25_halfrate/: dequantize.rs  frame.rs
crates/blip25-mbe/src/rate33/: dequantize.rs  frame.rs  priority.rs
crates/blip25-mbe/src/rate_conversion/: converter.rs  predictor.rs  repeater.rs
crates/blip25-mbe/tests/: roundtrip.rs  spec_examples.rs
docs/: codec_family_explainer.md  wire_formats_and_storage.md
tools/dvsi-diff/: Cargo.toml
tools/dvsi-diff/src/: main.rs
