[package]
name = "blip25-conformance-speech-quality"
description = "PESQ/STOI-style perceptual scoring of blip25-mbe output vs the AMBE-3000R chip. 4-cell matrix harness (our_enc|chip_enc) × (our_dec|chip_dec)."
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "conformance-speech-quality"
path = "src/main.rs"

[[example]]
name = "probe_chip_bit"
path = "examples/probe_chip_bit.rs"

[[example]]
name = "diff_per_frame"
path = "examples/diff_per_frame.rs"

[[example]]
name = "sine_probe"
path = "examples/sine_probe.rs"

[[example]]
name = "encode_pcm_to_bit"
path = "examples/encode_pcm_to_bit.rs"

[[example]]
name = "halfrate_envelope_converge"
path = "examples/halfrate_envelope_converge.rs"

[dependencies]
blip25-mbe.workspace = true
anyhow.workspace = true
clap.workspace = true
hound.workspace = true
